--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@
                           <div class="card-block p-span-0">
                             <div class="table-responsive">
                               <div class="floww-orderdetails"></div>
+                              <div class="floww-orderdetails2"></div>
                               <table class="table table-hover m-span-0">
                                 <thead>
                                   <tr style="text-align: center">
