--- a/index.html
+++ b/index.html
@@ -486,8 +486,22 @@
                         <div class="col-md-12">
                           <div class="card-block p-span-0">
                             <div class="table-responsive">
+                              <div
+                                class="floww-loading"
+                                style="
+                                  width: 20%;
+                                  height: 100vh;
+                                  margin: auto;
+                                  margin-top: 100px;
+                                "
+                              >
+                                <img
+                                  src="https://floww0.blob.core.windows.net/websitegraphics/graphics/floww/new-preloader.gif"
+                                  alt="loading"
+                                  width="100%"
+                                />
+                              </div>
                               <div class="floww-orderdetails"></div>
-                              <div class="floww-orderdetails2"></div>
                               <table class="table table-hover m-span-0">
                                 <thead>
                                   <tr style="text-align: center">
